kube/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deploy-client
  labels:
    app: chat-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-client
  template:
    metadata:
      labels:
        app: chat-client
    spec:
      containers:
        - name: chat-client
          image: scaled-chat-app-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /health/ready
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 80
              path: /health/live
            initialDelaySeconds: 15
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: chat-svc-client
  labels:
    app: chat-client
spec:
  type: ClusterIP
  selector:
    app: chat-client
  ports:
    - name: app
      port: 80
      targetPort: 80
