kube/jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deploy-jaeger
  labels:
    app: chat-jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-jaeger
  template:
    metadata:
      labels:
        app: chat-jaeger
    spec:
      containers:
        - name: chat-jaeger
          image: jaegertracing/all-in-one:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
            - containerPort: 16686
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 14250
            - containerPort: 14268
            - containerPort: 14269
            - containerPort: 9411
---

apiVersion: v1
kind: Service
metadata:
  name: chat-svc-jaeger
  labels:
    app: chat-jaeger
spec:
  type: ClusterIP
  selector:
    app: chat-jaeger
  ports:
    - name: entry
      port: 5432
      targetPort: 5432
