kube/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deploy-redis
  labels:
    app: chat-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-redis
  template:
    metadata:
      labels:
        app: chat-redis
    spec:
      containers:
        - name: chat-redis
          image: redis/redis-stack-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: chat-pvc-redis


---

apiVersion: v1
kind: Service
metadata:
  name: chat-svc-redis
  labels:
    app: chat-redis
spec:
  type: NodePort
  selector:
    app: chat-redis
  ports:
    - port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: chat-svc-redis
  labels:
    app: chat-redis
spec:
  type: ClusterIP
  selector:
    app: chat-redis
  ports:
    - port: 6379
      targetPort: 6379
