kube/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deploy-server
  labels:
    app: chat-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
        - name: chat-server
          image: scaled-chat-app-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              port: 3000
              path: /health/ready
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 3000
              path: /health/live
            initialDelaySeconds: 15
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: chat-svc-server
  labels:
    app: chat-server
spec:
  type: ClusterIP
  selector:
    app: chat-server
  ports:
    - name: app
      port: 3000
      targetPort: 3000
