kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Drop the /api prefix: /api/foo -> /foo
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # got these next 3 from chatGPT
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-svc-server
                port:
                  number: 3000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-svc-client
                port:
                  number: 80
